cleaned up home page code

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
-        <title>Home</title>
-    </head>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="index.css">
+      <title>Home</title>
+  </head>
   <body>
     <div class="navbar">
-        <a href="index.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="contact.html">Contact</a>
-        <a href="about_us.html">About Us</a>
-        <a href="documentation.html">Documentation</a>
+      <a href="index.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="contact.html">Contact</a>
+      <a href="about_us.html">About Us</a>
+      <a href="documentation.html">Documentation</a>
     </div>
 
     <br>
@@ -23,14 +23,16 @@
     <br>
     <br>
 
+    <!--Talks about what we are, how dedicated we are to our craft, where we are based etc...-->
+    <!--Need a better name for the section other than GOOD FLAVOR lol-->
     <section class="diagonal">
-        <div class="wrapper">
+      <div class="wrapper">
 
-            <h2 class="section-title">Good flavor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2 class="section-title">Good flavor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-        </div>
-      </section>
+      </div>
+    </section>
 
     <img id= "gelato_B" src="gelato_B.jpg">
 
@@ -44,37 +46,41 @@
     <br>
     <br>
     <br>
-
+    <!--Our mission section. Needs to sound professional-->
+    <!--I had yet to really figure out how I wanted to do spacing when I did this part so LEAVE THE BREAKLINES PLEASE-->
     <div id="mission">
       <h2 class="section-title">Our Mission</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    
+    <!--Talk about how vegan gelato is actually made, see the recipe sheet-->
     <div id="process">
       <h2 class="section-title">Our Process</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-
+    <!--Yes this is badly done, no I will not change it-->
     <section class="diagonal_B">
       <div class="wrapper">
         <img id="process_img" class="box" src="process.jpg">
       </div>
     </section>
+
     <br>
     <br>
     <br>
     <br>
 
     <footer>
-        <p>This page was created and maintained by the EHS TSA chapter</p>
+      <p>This page was created and maintained by the EHS TSA chapter</p>
     </footer>
   </body>
 </html>
