Fixed naming, added personal photo

--- a/about_us.html
+++ b/about_us.html
@@ -42,11 +42,11 @@
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
-        <img src="mallard.jpeg" alt="Mallard Duck">
+        <img src="Sawyer.jpg" alt="Sawyer McAlhany, This is his Senior Portrait">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="box">
-        <h2 class="section-title" style="margin-left: -20%;">Steven Wittman</h2>
+        <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
         <img src="mallard.jpeg" alt="Mallard Duck">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
