--- a/about_us.html
+++ b/about_us.html
@@ -43,7 +43,7 @@
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
         <img src="Sawyer.jpg" alt="Sawyer McAlhany, This is his Senior Portrait">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Ever Since He was a young boy, Sawyer loved Computers, this passion eventually lead to his acceptance at The University Of Alabama with a CyberSecurity Major. His hobbies include Video Games, Tinkering, and Renewing older hardware. He is certified in CompTIA ITF+ and FANUC Handling Tool while also trying to get his Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
