--- a/menu.html
+++ b/menu.html
@@ -56,17 +56,17 @@
       <!--GIVE THESE ENGLISH NAMES-->
       <!--unless we want to do like a cool latin thing and give them sub-descriptions, but only if we have extra time-->
       <p>
-        FIOR DI LATTE
+        Piazza Special
         <br><br>
         BELGIAN CHOCOLATE
         <br><br>
         STRAWBERRY
         <br><br>
-        CIOCCOLATO ALLA MENTA
+       Passion Fruit
         <br><br>
-        STRACCIATELLA
+        Green Apple
         <br><br>
-        GIANDUJA
+        Banana 
         <br><br>
         ESPRESSO
         <br><br>
@@ -78,9 +78,9 @@
         <br><br>
         CANNELLA
         <br><br>
-        OLIVE OIL & FIG
+        Berry Blue
         <br><br>
-        CRÈME BRÛLÉE
+        French Cream
         <br><br>
         DAIRY FREE BELGIAN CHOCOLATE
         <br><br>
