--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="index.css">
         <title>Home</title>
     </head>
-  <body style="background:  linear-gradient(to top left, #FFEFCB 0%, #b74d51 100%);"></body>    
+  <body style="background:  linear-gradient(to top left, #FFEFCB 0%, #CBA591 100%);"></body>    
   <div class="navbar">
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
