--- a/documentation.html
+++ b/documentation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="documentation.css">
         <title>Home</title>
     </head>
   <body>
@@ -28,16 +28,26 @@
     <br>
     <br>
     <br>
-    <center>
-        <embed src="work_log.pdf" width="50%" height="800px">
-        <h4>Attribution</h4>
         <body>
-            process.jpg, star5112, "Making gelato", https://www.flickr.com/photos/johnjoh/954831622/in/photostream/ CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/
-            <br>
-            gelato_B.jpg, This image is from Pixabay and was published prior to July 2017 under the Creative Commons CC0 1.0 Universal Public Domain Dedication license https://web.archive.org/web/20161229043156/https://pixabay.com/en/service/terms/ . In July 2017, Pixabay switched the old sitewide license for all uploads from Creative Commons CC0 to a custom license arrangement that does not meet the Creative Commons CC0 1.0 Universal Public Domain Dedication license terms.
-            <br>
-            gelato_C.jpg, stu_spivack, "I'm getting tired of saying gelato instead of "ice cream."", https://www.flickr.com/photos/stuart_spivack/183088194, CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/  
+            <h2 class="section-title" style="font-size: 2.15rem; margin-left: 20%;">Work Log</h2>
+            <center>
+                <embed src="work_log.pdf" width="50%" height="800px">
+            </center>
+            <h2 class="section-title" style="font-size: 2.15rem; margin-left: 20%;">Image Attribution</h2>
+            <center>
+            <p>
+                process.jpg, star5112, "Making gelato", https://www.flickr.com/photos/johnjoh/954831622/in/photostream/ CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/
+                <br><br><br>
+                gelato_B.jpg, This image was published under the Creative Commons CC0 1.0 Universal Public Domain Dedication license https://web.archive.org/web/20161229043156/https://pixabay.com/en/service/terms/ .
+                <br><br><br>
+                gelato_C.jpg, stu_spivack, "I'm getting tired of saying gelato instead of "ice cream."", https://www.flickr.com/photos/stuart_spivack/183088194, CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/  
+
+                <br><br><br>
+                coffee_A.jpeg, This image was published under the Attribution-NonCommercial-ShareAlike 4.0 International license. Originally created by Khürt L. Williams
+                <br><br><br>
+            </p>
+        </center>
         </body>
-    </center>
+
 
 </html>
