--- a/documentation.html
+++ b/documentation.html
@@ -41,10 +41,10 @@
                 gelato_B.jpg, This image was published under the Creative Commons CC0 1.0 Universal Public Domain Dedication license https://web.archive.org/web/20161229043156/https://pixabay.com/en/service/terms/ .
                 <br><br><br>
                 gelato_C.jpg, stu_spivack, "I'm getting tired of saying gelato instead of "ice cream."", https://www.flickr.com/photos/stuart_spivack/183088194, CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/  
-
                 <br><br><br>
                 coffee_A.jpeg, This image was published under the Attribution-NonCommercial-ShareAlike 4.0 International license. Originally created by Khürt L. Williams
                 <br><br><br>
+                Gelato_D.jfif has a CC0 Public Domain license, no attribution, https://pxhere.com/en/photo/1620151
             </p>
         </center>
         </body>
