--- a/menu.html
+++ b/menu.html
@@ -59,11 +59,7 @@
       <!--GIVE THESE ENGLISH NAMES-->
       <!--unless we want to do like a cool latin thing and give them sub-descriptions, but only if we have extra time-->
       <p>
-<<<<<<< HEAD
-        Piazza Special
-=======
         FIOR DI LATTE <sup>1</sup>
->>>>>>> 4cdf9be6f78f67ab31021915b7d0db8b58cba55f
         <br><br>
         BELGIAN CHOCOLATE
         <br><br>
@@ -71,7 +67,7 @@
         <br><br>
        Passion Fruit
         <br><br>
-        Green Apple
+        GReen APPLE
         <br><br>
         Banana 
         <br><br>
@@ -93,7 +89,7 @@
         <br><br>
         MATCHA COCONUT
         <br><br>
-        PASSIONFRUIT & MANGO SORBET
+        MANGO SORBET
         <br><br>
         LEMON SORBET
       </p>
