--- a/menu.html
+++ b/menu.html
@@ -61,11 +61,11 @@
       <p>
         FIOR DI LATTE <sup>1</sup>
         <br><br>
-        BELGIAN CHOCOLATE
+        GAMMA BERRY
         <br><br>
         STRAWBERRY
         <br><br>
-       Passion Fruit
+       PASSION FRUIT
         <br><br>
         GREEN APPLE
         <br><br>
@@ -85,7 +85,7 @@
         <br><br>
         French Cream
         <br><br>
-        DAIRY FREE BELGIAN CHOCOLATE
+         BELGIAN CHOCOLATE
         <br><br>
         MATCHA COCONUT
         <br><br>
