--- a/menu.html
+++ b/menu.html
@@ -81,9 +81,9 @@
         <br><br>
         CANNELLA
         <br><br>
-        Berry Blue
+        BERRY BLUE
         <br><br>
-        French Cream
+        FRENCH CREAM
         <br><br>
          BELGIAN CHOCOLATE
         <br><br>
