--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="wrapper">
 
         <h2 class="section-title">Good flavor</h2>
-        <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Freaky feet ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p> At Piazza Parlor, flavor always comes first. We want you to know that we always give A+ quality Gelato every scoop, every time.
 
       </div>
     </section>
