--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <!--I had yet to really figure out how I wanted to do spacing when I did this part so LEAVE THE BREAKLINES PLEASE-->
     <div id="mission">
       <h2 class="section-title">Our Mission</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Our mission at Piazza Paelor is to serve delicious gelato to the world while also looking out for it at the same time. As Papa Piazza used to say, “If you got to take the ingredients from an animal, you aren't doing it right”.
+      </p>
     </div>
 
     <br>
