--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="wrapper">
 
         <h2 class="section-title">Good flavor</h2>
-        <p> At Piazza Parlor, flavor always comes first. We want you to know that we always give A+ quality Gelato every scoop, every time.
+        <p> At Piazza's Parlor, flavor always comes first. We want you to know that we always give A+ quality Gelato every scoop, every time.
 
       </div>
     </section>
@@ -50,7 +50,7 @@
     <!--I had yet to really figure out how I wanted to do spacing when I did this part so LEAVE THE BREAKLINES PLEASE-->
     <div id="mission">
       <h2 class="section-title">Our Mission</h2>
-      <p>Our mission at Piazza Paelor is to serve delicious gelato to the world while also looking out for it at the same time. As Papa Piazza used to say, “If you got to take the ingredients from an animal, you aren't doing it right”.
+      <p>Our mission at Piazza's Parlor is to serve delicious gelato to the world while also looking out for it at the same time. As Papa Piazza used to say, “If you got to take the ingredients from an animal, you aren't doing it right”.
       </p>
     </div>
 
@@ -66,7 +66,7 @@
     <!--Talk about how vegan gelato is actually made, see the recipe sheet-->
     <div id="process">
       <h2 class="section-title">Our Process</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>All of our gelato is made with 100% cruelty free milk alternatives, mixed daily to perfection, and is served with your favorite drinks, flavors, and toppings.</p>
     </div>
     <!--Yes this is badly done, no I will not change it-->
     <section class="diagonal_B">
