fixed so much BS

--- a/menu.html
+++ b/menu.html
@@ -71,9 +71,9 @@
         <br><br>
         BANANA
         <br><br>
-        ESPRESSO <sup>2</sup>    <sup>3</sup>
+        ESPRESSO
         <br><br>
-        PISTACCHIO
+        PISTACCHIO <sup>2</sup>
         <br><br>
         CARAMELLO
         <br><br>
@@ -87,7 +87,7 @@
         <br><br>
          BELGIAN CHOCOLATE
         <br><br>
-        MATCHA COCONUT
+        MATCHA COCONUT <sup>2</sup>
         <br><br>
         MANGO SORBET
         <br><br>
@@ -109,7 +109,7 @@
         <br><br>
       </p>
 
-      <p style="font-size: 12px;">Items marked with the following labels contain the following allergens. all our products contain idk, soy milk?
+      <p style="font-size: 12px;">Items marked with the following labels contain the following allergens. all our products contain soy milk.
         <br>
         1 - peanuts
         <br>
