--- a/about_us.html
+++ b/about_us.html
@@ -37,13 +37,13 @@
     <div class="about_us_grid">
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Elijah Piazza</h2>
-        <img src="IMG_4847.png" alt="Elijah, team lead">
+        <img src="IMG_4847.png" alt="Elijah Piazza, Self Proclaimed Team Leader. ">
         <p>I am from a military family, and was born in Louisiana, but ended up traveling every three years from Kansas, Alabama, Hawaii, and finally back to Alabama for good. I enjoy programming embedded systems, painting, playing Dungeons and Dragons as well as Warhammer 40K, and circuitry. I am also a member of the EHS Cyber Security Team, and National Honor Society. My certifications include HTML & CSS, Adobe Express, Digital Media Literacy, and Fiber Optic Technician Certification. I hope to obtain a bachelor's in Computer Engineering with a minor in Computer Science.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
         <img src="Sawyer.jpg" alt="Sawyer McAlhany, programmer">
-        <p>Ever Since He was a young boy, Sawyer loved Computers, this passion eventually lead to his acceptance at The University Of Alabama with a CyberSecurity Major. His hobbies include Video Games, Tinkering, and Renewing older hardware. He is certified in CompTIA ITF+ and FANUC Handling Tool while also trying to get his Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
+        <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a CyberSecurity Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
@@ -53,7 +53,7 @@
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Alex Stuart</h2>
         <img src="Alex.JPG" alt="Alex Stuart, Artist">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure kangaroo furry dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p> I'm an Alabama Native and Lifetime Resident. I spend my free time creating music, video games, and art.  learning, collecting retro gaming systems. I am certified in MS Word & PowerPoint as well as Adobe InDesign / Illustrator . I am an active member of my chapter's robotics team. I plan to get a bachelor's degree in cyber security.</p>
       </div>
     </div>
 
