--- a/about_us.html
+++ b/about_us.html
@@ -27,7 +27,7 @@
       <div class="wrapper">
 
         <h2 class="section-title" style="font-size: 2.15rem;">Our Story</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>The City of Enterprise TSA chapter is one of the best in Alabama, and is proud to represent TSA and all it stands for, acting as a beacon to all who wish to forward their education andunderstanding of technology. Our web development team is a group highly involved students that are passionate about creating solutions in the modern digital age. Using our web design skills, we built this user friendly website from the ground up using HTML 5. We are committed to learning and using the latest technologies to support TSA's efforts and make a positive impact in our community."</p>
 
       </div>
     </section>
