working on home page

--- a/about_us.html
+++ b/about_us.html
@@ -27,7 +27,7 @@
       <div class="wrapper">
 
         <h2 class="section-title" style="font-size: 2.15rem;">Our Story</h2>
-        <p>The City of Enterprise TSA chapter is one of the best in Alabama, and is proud to represent TSA and all it stands for, acting as a beacon to all who wish to forward their education andunderstanding of technology. Our web development team is a group highly involved students that are passionate about creating solutions in the modern digital age. Using our web design skills, we built this user friendly website from the ground up using HTML 5. We are committed to learning and using the latest technologies to support TSA's efforts and make a positive impact in our community."</p>
+        <p>The City of Enterprise TSA chapter is one of the best in Alabama, and is proud to represent TSA and all it stands for, acting as a beacon to all who wish to forward their education and understanding of technology. Our web development team is a group highly involved students that are passionate about creating solutions in the modern digital age. Using our web design skills, we built this user friendly website from the ground up using HTML 5. We are committed to learning and using the latest technologies to support TSA's efforts and make a positive impact in our community.</p>
 
       </div>
     </section>
@@ -38,7 +38,7 @@
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Elijah Piazza</h2>
         <img src="IMG_4847.png" alt="Elijah Piazza, Self Proclaimed Team Leader. ">
-        <p>I am from a military family, and was born in Louisiana, but ended up traveling every three years from Kansas, Alabama, Hawaii, and finally back to Alabama for good. I enjoy programming embedded systems, painting, playing Dungeons and Dragons as well as Warhammer 40K, and circuitry. I am also a member of the EHS Cyber Security Team, and National Honor Society. My certifications include HTML & CSS, Adobe Express, Digital Media Literacy, and Fiber Optic Technician Certification. I hope to obtain a bachelor's in Computer Engineering with a minor in Computer Science.</p>
+        <p>I am from a military family, and was born in Louisiana, but ended up traveling every three years from Kansas, Alabama, Hawaii, and finally back to Alabama for good. I enjoy programming embedded systems, painting, D&D, Warhammer 40K, and circuitry. I am a member of the EHS Cyber Security Team, National Honor Society, and National Technical Honors Society. My certifications include HTML&CSS, Adobe Express, Digital Media Literacy, and Fiber Optic Technician Certification. I hope to obtain a bachelor's in Computer Engineering with a minor in Computer Science.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
