--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
     <br>
 
     <!--Talks about what we are, how dedicated we are to our craft, where we are based etc...-->
-    <!--Need a better name for the section other than GOOD FLAVOR lol-->
     <section class="diagonal">
       <div class="wrapper">
 
-        <h2 class="section-title">Good flavor</h2>
-        <p> At Piazza's Parlor, flavor always comes first. We want you to know that we always give A+ quality Gelato every scoop, every time.
-
+        <h2 class="section-title">Our Flavors</h2>
+        <p> At Piazza's Parlor, flavor always comes first. We keep our many Gelato flavors on a rotating schedule, and are always looking to add to our selection. The flavors we offer vary greatly and represent the spirit of ingenuity and creation that we strive to achieve everyday.</p>
       </div>
     </section>
 
@@ -50,7 +48,7 @@
     <!--I had yet to really figure out how I wanted to do spacing when I did this part so LEAVE THE BREAKLINES PLEASE-->
     <div id="mission">
       <h2 class="section-title">Our Mission</h2>
-      <p>Our mission at Piazza's Parlor is to serve delicious gelato to the world while also looking out for it at the same time. As Papa Piazza used to say, “If you got to take the ingredients from an animal, you aren't doing it right”.
+      <p>Our mission statement is Piazza's Parlour is to "provide good times, with no harm." Everything from our ingredients to our recycled materials is dedicated to this mission. We hope to 
       </p>
     </div>
 
