--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--I had yet to really figure out how I wanted to do spacing when I did this part so LEAVE THE BREAKLINES PLEASE-->
     <div id="mission">
       <h2 class="section-title">Our Mission</h2>
-      <p>Our mission statement is Piazza's Parlour is to "provide good times, with no harm." Everything from our ingredients to our recycled materials is dedicated to this mission. We hope to 
+      <p>Our mission statement is Piazza's Parlour is to "provide good times, with no harm." Everything from our ingredients to our recycled materials is dedicated to this mission. We hope to inspire others within our community and greater Alabama to think about how they can enjoy cruelty free treats. 
       </p>
     </div>
 
