--- a/about_us.html
+++ b/about_us.html
@@ -27,7 +27,7 @@
       <div class="wrapper">
 
         <h2 class="section-title" style="font-size: 2.15rem;">Our Story</h2>
-        <p>The City of Enterprise TSA chapter is one of the best in Alabama, and is proud to represent TSA and all it stands for, acting as a beacon to all who wish to forward their education and understanding of technology. Our web development team is a group highly involved students that are passionate about creating solutions in the modern digital age. Using our web design skills, we built this user friendly website from the ground up using HTML 5. We are committed to learning and using the latest technologies to support TSA's efforts and make a positive impact in our community.</p>
+        <p>The story of Piazza's Parlour starts with the City of Enterprise TSA chapter. it is one of the best in Alabama, and is proud to represent TSA and all it stands for. in 2025 we decided to create a resturant that did would capture the essence of TSA. And so we decided to create a cruelty free treat that anyone, from any walk of life could enjoy, without sacrificing quality. On March 31nd, we opened our parlour on 123 Mainstreet, Enterprise Alabama, and have been sharing joy since.</p>
 
       </div>
     </section>
@@ -37,22 +37,22 @@
     <div class="about_us_grid">
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Elijah Piazza</h2>
-        <img src="IMG_4847.png" alt="Elijah Piazza, Self Proclaimed Team Leader. ">
-        <p>I am from a military family, and was born in Louisiana, but ended up traveling every three years from Kansas, Alabama, Hawaii, and finally back to Alabama for good. I enjoy programming embedded systems, painting, D&D, Warhammer 40K, and circuitry. I am a member of the EHS Cyber Security Team, National Honor Society, and National Technical Honors Society. My certifications include HTML&CSS, Adobe Express, Digital Media Literacy, and Fiber Optic Technician Certification. I hope to obtain a bachelor's in Computer Engineering with a minor in Computer Science.</p>
+        <img src="IMG_4847.png" alt="Elijah Piazza, self-proclaimed glorious team leader">
+        <p>I am from a military family, and was born in Louisiana, but ended up traveling every three years from Kansas, Alabama, Hawaii, and finally back to Alabama for good. I enjoy programming, painting, D&D, and circuitry. I am a member of the EHS Cyber Security Team, National Honor Society, and National Technical Honors Society. My certifications include HTML&CSS, Adobe Express, Digital Media Literacy, and Fiber Optic Technician Certification. I hope to obtain a bachelor's in Computer Engineering with a minor in Computer Science.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
-        <img src="Sawyer.jpg" alt="Sawyer McAlhany, programmer">
+        <img src="Sawyer.jpg" alt="Sawyer McAlhany, DIWhy programmer">
         <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a CyberSecurity Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
-        <img src="IMG_9956.jpg" alt="Evan, researcher">
+        <img src="IMG_9956.jpg" alt="Evan, Veganisim and pokemon researcher">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Alex Stuart</h2>
-        <img src="Alex.JPG" alt="Alex Stuart, Artist">
+        <img src="Alex.JPG" alt="Alex Stuart, Unpaid Artist">
         <p> I'm an Alabama Native and Lifetime Resident. I spend my free time creating music, video games, and art.  learning, collecting retro gaming systems. I am certified in MS Word & PowerPoint as well as Adobe InDesign / Illustrator . I am an active member of my chapter's robotics team. I plan to get a bachelor's degree in cyber security.</p>
       </div>
     </div>
