--- a/menu.html
+++ b/menu.html
@@ -109,7 +109,7 @@
         <br><br>
       </p>
 
-      <p style="font-size: 12px;">Items marked with the following labels contain the following allergens. all our products contain soy milk.
+      <p style="font-size: 12px;">Items marked with the following labels contain the following allergens. all our products contain almond milk.
         <br>
         1 - peanuts
         <br>
