--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--I had yet to really figure out how I wanted to do spacing when I did this part so LEAVE THE BREAKLINES PLEASE-->
     <div id="mission">
       <h2 class="section-title">Our Mission</h2>
-      <p>Our mission statement is Piazza's Parlour is to "provide good times, with no harm." Everything from our ingredients to our recycled materials is dedicated to this mission. We hope to inspire others within our community and greater Alabama to think about how they can enjoy cruelty free treats. 
+      <p>Our mission statement is Piazza's Parlour is to "provide good times, with no harm." Everything from our ingredients to our recycled materials is dedicated to this mission. We hope to connect with others within our community and greater Alabama by sharing our cruelty free treats.
       </p>
     </div>
 
@@ -64,7 +64,7 @@
     <!--Talk about how vegan gelato is actually made, see the recipe sheet-->
     <div id="process">
       <h2 class="section-title">Our Process</h2>
-      <p>All of our gelato is made with 100% cruelty free milk alternatives, mixed daily to perfection, and is served with your favorite drinks, flavors, and toppings.</p>
+      <p>Our Gelato is created with completely plant-based and organic non-GMO ingredients. We use Almond and Coconut milk, sugar, and cornstarch for all our bases. All of our ingredients are sourced from Alabama farms. From there, our expert staff mix, freeze, and prepare the Gelato in-house</p>
     </div>
     <!--Yes this is badly done, no I will not change it-->
     <section class="diagonal_B">
