--- a/about_us.html
+++ b/about_us.html
@@ -48,7 +48,7 @@
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
         <img src="IMG_9956.jpg" alt="Evan, researcher">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>I am from a military family so I spent most of my life moving around till I ended up here I will be going to the University of Alabama in the fall for cybersecurity in my free time I enjoy playing soccer at the local YMCA and playing competitive Pokemon
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Alex Stuart</h2>
